--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
 </head>
 <body>
     <nav id="desktop-nav">
-        <div class="logo">Sayantika Saha</div>
         <div>
             <ul class="nav-links">
                 <li><a href="#about">About</a></li>
@@ -35,6 +34,27 @@
             </div>
         </div>
     </nav>
+    <section id="profile">
+        <div class="section__pic-container">
+            <img src="./assets/profile-pic.png" alt="Sayantika Saha P.pic">
+        </div>
+        <div class="section__text">
+            <p class="section__text__p1">Hello, I'm</p>
+            <h1 class="title">Sayantika Saha</h1>
+            <p class="section__text__p2">Data Scientist</p>
+            <div class="btn-container">
+                <button class="btn btn-color-2" onclick="window.open('./assets/resume-example.pdf')">
+                    Download CV</button>
+                <button class="btn btn-color-1" onclick="location.href = './#contact'">
+                    Contact Info</button>
+            </div>
+            <div id="socials-container">
+                <img src="./assets/linkedin.png" alt="My Linkedin Profile" class="icon" onclick="location.href = 'https://www.linkedin.com/in/sayantika-saha-77ba61169/'">
+                <img src="./assets/github.png" alt="My Github Profile" class="icon" onclick="location.href = 'https://github.com/Sayantika96'">
+
+            </div>
+        </div>
+    </section>
     <script src="script.js"></script>
 </body>
 </html>
