--- a/index.html
+++ b/index.html
@@ -72,19 +72,25 @@
                         alt="experience icon"
                         class="icon">
                         <h3>Experience</h3>
-                        <p>2+ Experience <br/> Software Engineer</p>
+                        <p>2+ Experience<br  />Software Engineer</p>
                     </div>
                     <div class="details-container">
                         <img src="./assets/education.png" 
                         alt="education icon"
                         class="icon">
                         <h3>Education</h3>
-                        <p>B.Sc Computer Science and Engineering <br/> PBD in Applied Data Science</p>
+                        <p>B.Sc Computer Science and Engineering<br  />PBD in Applied Data Science</p>
                     </div>
+                </div>
+                <div class="text-container">
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolore deleniti possimus corporis esse sit voluptate doloribus magni aperiam quidem? Quaerat quam accusamus magni atque. Rerum placeat quod magni temporibus necessitatibus.
+                    </p>
                 </div>
             </div>
         </div>
-
+        <img src="./assets/arrow.png" alt="Arrow icon" class="icon arrow"
+        onclick="location.href='./#experience'"/>
     </section>
     <script src="script.js"></script>
 </body>
