--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             <h1 class="title">Sayantika Saha</h1>
             <p class="section__text__p2">Data Scientist</p>
             <div class="btn-container">
-                <button class="btn btn-color-2" onclick="window.open('./assets/resume-example.pdf')">
+                <button class="btn btn-color-2" onclick="window.open('./assets/Sayantika_Saha CV.pdf')">
                     Download CV</button>
                 <button class="btn btn-color-1" onclick="location.href = './#contact'">
                     Contact Info</button>
@@ -60,10 +60,10 @@
         <h1 class="title">About Me</h1>
         <div class="section-container">
             <div class="section__pic-container">
-                <img src="./assets/about-pic.png" 
+                <!--img src="./assets/about-pic.png" 
                      alt="Profile Picture"
                      class="about-pic"
-                />
+                /-->
             </div>
             <div class="about-details-container">
                 <div class="about-containers">
@@ -84,8 +84,7 @@
                 </div>
                 <div class="text-container">
                     <p>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolore deleniti possimus corporis esse sit voluptate doloribus magni aperiam quidem? Quaerat quam accusamus magni atque. Rerum placeat quod magni temporibus necessitatibus.
-                    </p>
+                        In my capacity as an Operation Analyst at Well Food & Beverage Company Ltd., I implemented data-driven strategies that resulted in a substantial 5% improvement in supply chain performance. During my tenure as a Business Analysis Intern at BRAC IT Services, I adeptly employed Power BI for impactful data visualization. Serving as a Software Engineer at SUN CO, LTD, I successfully spearheaded the development of web systems and language-learning apps, demonstrating adept project management and effective bilingual communication. Concurrently, I am enrolled in a Post-Baccalaureate Diploma in Applied Data Science at Thompson Rivers University, where I am working on several PYTHON and R projects. I am complemented by certifications in Google Data Analytics and IBM Data Science, signifying a dedicated commitment to continual learning and skill advancement.                    </p>
                 </div>
             </div>
         </div>
