--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
         <div>
             <ul class="nav-links">
                 <li><a href="#about">About</a></li>
-                <li><a href="#experience">Experience</a></li>
                 <li><a href="#projects">Project</a></li>
+                <li><a href="#publication">Publication</a></li>
                 <li><a href="#contact">Contact</a></li>             
             </ul>
         </div>
@@ -94,6 +94,7 @@
         <p class="section__text__p1">Browse My Recent</p>
         <h1 class="title">Projects</h1>
         <div class="experience-details-container">
+            <div class="about-containers">
             <div class="details-container color-container">
                 <div class="article-container">
                     <img 
@@ -110,15 +111,84 @@
                         >
                         New York Air Bnb
                     </button>
-                </div>
+                </div>               
             </div>
-            <div class="details-container color-container"></div>
+            <div class="details-container color-container">
                 <div class="article-container">
-                    <div class="details-container color-container">
-                        <div class="article-container">
+                    <img 
+                        src="./assets/project-1.png" 
+                        alt="Project-2"
+                        class="project-img"
+                    />
+                </div>
+                <h2 class="experience-sub-title project-title">Project Two</h2>
+                <div class="btn-container">
+                    <button
+                        class="btn btn-color-2 project-btn"
+                        onclick="location.href='https://github.com/Sayantika96/Analyzing-Migration-Trends-in-Canada'"
+                        >
+                        Analyzing the migration trends within Canada
+                    </button>
+                </div>               
+            </div>
+            <div class="details-container color-container">
+                <div class="article-container">
+                    <img 
+                        src="./assets/project-1.png" 
+                        alt="Project-3"
+                        class="project-img"
+                    />
+                </div>
+                <h2 class="experience-sub-title project-title">Project Three</h2>
+                <div class="btn-container">
+                    <button
+                        class="btn btn-color-2 project-btn"
+                        onclick="location.href='https://github.com/Sayantika96/Heart_Disease_Prediction'"
+                        >
+                        Heart Disease Prediction
+                    </button>
+                </div>               
+            </div></div>
         </div>
     </section>
-
+    <section id="publication">
+        
+    </section>
+    <section id="contact">
+        <p class="section__text__p1">Get in Touch</p>
+        <h1 class="title">Contact</h1>
+        <div class="contact-info-upper-container">
+            <div class="contact-info-container">
+                <img 
+                    src="./assets/email.png" 
+                    alt="Email icon"
+                    class="icon contact-icon email-icon"
+                />
+                <p><a href="mailto:sayantika0307@gmail.com">sayantika0307@gmail.com</a></p>
+            </div>
+            <div class="contact-info-container"></div>
+                <img 
+                    src="./assets/linkedin.png" 
+                    alt="Linkedin icon"
+                    class="icon contact-icon"
+                />
+                <p><a href="https://www.linkedin.com/in/sayantika-saha-77ba61169/">LinkedIn</a></p>
+            </div>
+        </div>
+    </section>
+    <footer>
+        <nav>
+            <div class="nav-links-container">
+                <ul class="nav-links">
+                    <li><a href="#about">About</a></li>
+                    <li><a href="#projects">Project</a></li>
+                    <li><a href="#publication">Publication</a></li>
+                    <li><a href="#contact">Contact</a></li>             
+                </ul>
+            </div>
+        </nav>
+        <p>Copyright &#169; 2024 Sayantika Saha. All Rights Reserved</p>
+    </footer>
     <script src="script.js"></script>
 </body>
 </html>
