changed linkedin address

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                     Contact Info</button>
             </div>
             <div id="socials-container">
-                <img src="./assets/linkedin.png" alt="My Linkedin Profile" class="icon" onclick="location.href = 'https://www.linkedin.com/in/sayantika-saha-77ba61169/'">
+                <img src="./assets/linkedin.png" alt="My Linkedin Profile" class="icon" onclick="location.href = 'https://www.linkedin.com/in/sayantika-saha/'">
                 <img src="./assets/github.png" alt="My Github Profile" class="icon" onclick="location.href = 'https://github.com/Sayantika96'">
 
             </div>
