updated publication div

--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
                         class="project-img"
                     /-->
                 </div>
-                <h2 class="experience-sub-title project-title">Research Ongoing</h2>
+                <h2 class="experience-sub-title project-title"></h2>
                 <div class="btn-container">
                     <!--button
                         class="btn btn-color-2 project-btn"
@@ -200,7 +200,7 @@
                         class="project-img"
                     /-->
                 </div>
-                <h2 class="experience-sub-title project-title">Research Ongoing</h2>
+                <h2 class="experience-sub-title project-title"></h2>
                 <div class="btn-container">
                     <!--button
                         class="btn btn-color-2 project-btn"
